--- a/sass/layout/_destination.scss
+++ b/sass/layout/_destination.scss
@@ -128,7 +128,7 @@
                     article {
                         justify-items: start;
                         .destination-info {
-                            gap: 7.7rem;
+                            gap: 6rem;
                             padding: 0;
                             justify-content: start;
                         }
